--- a/_includes/list.html
+++ b/_includes/list.html
@@ -30,7 +30,7 @@
       buttons=d.buttons
       caption=d.caption
       content=d.content
-      date=d.date
+      date=d.date | date: "%Y年%m月%d日"
       description=d.description
       excerpt=d.excerpt
       height=d.height
