--- a/_includes/post-info.html
+++ b/_includes/post-info.html
@@ -22,8 +22,8 @@
     {% endfor %}
   {% endif %}
 
-  {% assign published = include.published | date: "%B %d, %Y" %}
-  {% assign updated = include.updated | date: "%B %d, %Y" %}
+  {% assign published = include.published | date: "%Y年%B月%d日" %}
+  {% assign updated = include.updated | date: "%Y年%B月%d日" %}
 
   {% if published %}
     <span data-tooltip="Originally published on">
